<resources>
    <string name="app_name">Blood Pressure App</string>
    <string name="btnAddBlood">Add Blood pressure</string>
    <string name="enterNewName">Enter New Name</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="hintUserId">User ID</string>
    <string name="hintSystolic">Systolic Reading</string>
    <string name="hintDiastolic">Diastolic Reading</string>
    <string name="hintDate">dd/mm/yy</string>
    <string name="hintTime">hh/mm</string>
    <string name="hintReport">Generate Report</string>
    <string name="textview">TextView</string>

    <string-array name="schools">
        <item>Business</item>
        <item>Computing</item>
        <item>Energy</item>
        <item>Mining</item>
        <item>Nursing</item>
    </string-array>

</resources>
