<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintUserId"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextSystolic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintSystolic"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextDiastolic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintDiastolic"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintDate"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintTime"
                android:inputType="time" />

            <Button
                android:id="@+id/buttonAddStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAddStudent" />

        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/lvStudents"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>

